# ThermoDynamics

./: .gitignore  CMakeLists.txt  README.md
data/: binary_sol_liq  equilibrium_state  fractional_crystal  fsp_sol_liq  olv_sol_liq  pxn_sol_liq  solidus_liquidus
lib/: Crystallization.c  Geodynamics.c  Instructions.c  global_defs.h  main.c  prototypes.h
visual/: binary_sol_liq.py  debug_solidus_liquidus.py  equilibrium_state.py  fractional_crystal.py  fractional_crystal_column.py  fractional_crystal_equilibium.py  solidus_liquidus.py
